# another-walk-for-monchi

./: .gitignore  README.md  results.ipynb
MFIP-MFSED-Tables/: bip.py  compIPvsMFIP.py  compSEDvsMFSED.py  genBordersMFIPandMFSED.py  mfbrTabs.py
MFIP-MFSED-Tables/data/VGGFace2/test/: unpack.py
MFIP-Tables/: bip.py  genBorderMFIP.py  genSynVectors.py  mfbrTabs.py
fss/: bip.go  go.mod  main.go  table.py
fss/funshade/funshade/c/: aes.h
go/: bip.go  compIPvsMFIP.go  go.mod  go.sum  main.go  maskSelections.go  matrices.go
go/data/LFW/: p.py
go/data/LFW/AJ_Lamas/: 0.csv  shape.py
go/data/LFW/Aaron_Eckhart/: 0.csv
go/data/LFW/Aaron_Guiel/: 0.csv
go/data/LFW/Aaron_Patterson/: 0.csv
go/data/LFW/Aaron_Peirsol/: 0.csv  1.csv  2.csv  3.csv
go/data/LFW/Aaron_Pena/: 0.csv
go/data/LFW/Aaron_Sorkin/: 0.csv  1.csv
go/data/LFW/Aaron_Tippin/: 0.csv
go/data/LFW/Abba_Eban/: 0.csv
go/data/LFW/Abbas_Kiarostami/: 0.csv
go/data/LFW/Abdul_Rahman/: 0.csv
go/lookupTables/Borders/: Borders_nB_3_dimF_128.csv
go/lookupTables/MFIP/: MFIP_nB_3_dimF_128.csv
go/results/: .200_results.csv.swp  1000000_results.csv  1000_results.csv  200_results.csv
mfip/: compIPvsMFIP.py  testFacialFeatures.py
mfip-tables/: genBorderMFIP.py  mfbrTabs.py  utils.py
monchi-lut/: go.mod  go.sum  main.go  matrices.go
monchichi/: go.mod  lut.go  main.go  matrices.go
mpc/: main.go  test.go
test/: test.go
test_mpc/: go.mod  main.go  test.go
test_mpc/funshade/: CMakeLists.txt  README.md
test_mpc/funshade/funshade/c/: fss.h
test_mpc/results/: 1000_results.csv  200_results.csv
(+13218 files in other folders)
